# coopie

./: .bumpversion.toml  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  copier.yml  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/workflows/: ci.yml  release.yml
.trae/docs/: iter-02-copier-update冲突分析与版本号修复.md  iter-05-Makefile快捷命令封装.md  iter-06-README与项目文档完善.md  iter-07-bump目标默认patch.md  iter-08-移除项目Dockerfile支持.md  iter-09-修复Node20弃用警告.md  iter-12-项目类型选择与编码规范.md  iter-13-PySide6支持与版本区分.md  iter-15-req清理规则优化与PyPI-badge调查.md  iter-16-拆分工具配置到独立文件.md  iter-18-Windows文件名兼容.md  iter-21-gui设计规范与模板rule12填充.md  iter-25-工具链配置拆分.md
.trae/req/: req-06-README与项目文档完善.md  req-07-bump目标默认patch.md  req-08-移除项目Dockerfile支持.md  req-09-修复Node20弃用警告.md  req-10-项目问题修复与优化.md  req-11-CLI子命令重构.md  req-12-项目类型选择与编码规范.md  req-13-PySide6支持与版本区分.md  req-15-req清理规则优化与PyPI-badge调查.md  req-16-拆分工具配置到独立文件.md  req-19-new命令网络卡死修复.md  req-20-gitee国内源与多远程推送.md  req-21-gui设计规范与模板rule12填充.md  req-25-工具链配置拆分.md
.trae/rules/: python-standards.md  rule-01-开发流程.md  rule-03-触发场景.md  rule-11-python-standards.md  rule-12-gui-pyside-standards.md  rule-12-pyqt-standards.md  self-driven.md
.trae/skills/: skill-05-Makefile快捷命令封装.md  skill-06-README与项目文档完善.md  skill-07-bump目标默认patch.md  skill-08-移除项目Dockerfile支持.md  skill-09-修复Node20弃用警告.md  skill-10-项目问题修复与优化.md  skill-11-CLI子命令重构.md  skill-12-项目类型选择与编码规范.md  skill-14-精简README用户导向.md  skill-17-回退工具配置拆分.md
.trae/skills/gui-pyside/: SKILL.md
.trae/skills/gui-pysidex/: SKILL.md
.trae/skills/python-cli/: SKILL.md
.trae/skills/python-config/: SKILL.md
.trae/skills/python-gui-pyside/: PATTERNS.md  SKILL.md
.trae/skills/python-logging/: SKILL.md
.trae/skills/python-performance/: SKILL.md
.trae/skills/python-subprocess/: SKILL.md
.trae/skills/python-testing/: SKILL.md
docs/: api.rst  conf.py  index.rst
src/coopie/: __init__.py  cli.py
src/pytemplate/: cli.py
template/: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  {% if license != 'None' %}LICENSE{% endif %}  {% if use_docker %}.dockerignore{% endif %}  {% if use_docker %}Dockerfile{% endif %}  {% if use_docs %}.readthedocs.yaml{% endif %}  {% if use_tox %}tox.ini{% endif %}
template/.trae/rules/: python-standards.md  rule-01-开发流程.md  rule-02-产物约束.md  rule-03-触发场景.md  rule-08-测试要求.md  rule-11-python-standards.md  rule-12-pyside-dev.md  self-driven.md  {% if project_type == "gui" %}rule-12-pyqt-standards.md{% endif %}  {% if project_type == 'gui' %}rule-12-gui-pyside-standards.md{% endif %}
template/.trae/skills/gui-pyside/: LAYOUT.md  PATTERNS.md  SKILL.md
template/.trae/skills/gui-pyside2/: SKILL.md
template/.trae/skills/gui-pysidex/: SKILL.md
template/.trae/skills/python-cli/: SKILL.md
template/.trae/skills/python-config/: SKILL.md
template/.trae/skills/python-gui-pyside/: SKILL.md
template/.trae/skills/python-logging/: SKILL.md
template/.trae/skills/python-subprocess/: SKILL.md
template/.trae/skills/python-testing/: SKILL.md
template/.trae/skills/{% if project_type == 'web' %}fastapi{% endif %}/: SKILL.md
template/.trae/skills/{% if project_type == 'web' %}python-fastapi{% endif %}/: SKILL.md
template/src/{{ package_name }}/: __init__.py  {% if project_type == 'gui' %}main.py{% endif %}
template/tests/: test_{{ package_name }}.py
template/{% if use_cicd %}.github{% endif %}/workflows/: ci.yml  release.yml
template/{% if use_docs %}docs{% endif %}/: api.rst  conf.py  index.rst
tests/: test_cli.py  test_coopie.py
