[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies    = []

description     = "基于 [copier](https://copier.readthedocs.io/) 的通用 Python 项目模板。"
license         = "MIT"
name            = "coopie"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.4.3"

[project.optional-dependencies]
dev = [
    "coopie[lint,test]",
    "prek>=0.4.5",
    "tox-uv>=1.13.1",
    "tox>=4.25.0",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]

[project.scripts]
coopie = "coopie.cli:main"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
required-version = ">=0.5.0"

[[tool.uv.index]]
default = true
url     = "https://mirrors.aliyun.com/pypi/simple/"

[tool.hatch.build.targets.wheel]
packages = ["src/coopie"]

[tool.hatch.build.targets.wheel.force-include]
"src/coopie/py.typed" = "coopie/py.typed"

[dependency-groups]
dev = ["coopie[dev,docs]"]

[tool.bumpversion]
current_version = "0.4.3"
commit = true
exclude = ["template/*"]
message = "chore: 更新版本 {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(version\s+=\s+)"{current_version}"'
replace = '\1"{new_version}"'

[[tool.bumpversion.files]]
filename = "src/coopie/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'