[project]
authors = [{ name = "{{ author_name }}"{% if author_email %}, email = "{{ author_email }}"{% endif %} }]
classifiers = [
    "Programming Language :: Python :: 3",
{% for v in supported_py_versions %}    "Programming Language :: Python :: {{ v }}",
{% endfor %}    "Topic :: Software Development :: Libraries :: Python Modules",
]

{% if project_type == "gui" %}dependencies    = ["PySide2>=5.15.2.1; python_version <= '3.10'", "PySide6>=6.5.0; python_version >= '3.11'"]
{% elif project_type == "web" %}dependencies    = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
{% else %}dependencies    = []
{% endif %}
description     = "{{ description }}"
{% if license != "None" %}license         = "{{ license }}"
{% endif %}name            = "{{ package_name }}"
readme          = "README.md"
requires-python = ">={{ min_python_version }}"
version         = "{{ initial_version }}"

[project.optional-dependencies]
dev = [
    "{{ package_name }}[lint,test]",
    "prek>=0.4.5",
{% if use_tox %}    "tox-uv>=1.13.1",
    "tox>=4.25.0",
{% endif %}]
{% if use_docs %}docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
{% endif %}lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]
{% if use_cli or project_type == "cli" %}
[project.scripts]
{{ package_name }} = "{{ package_name }}.cli:main"

{% endif %}[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
required-version = ">=0.5.0"

{% if use_domestic_mirrors %}[[tool.uv.index]]
default = true
url     = "https://mirrors.aliyun.com/pypi/simple/"

{% endif %}[tool.hatch.build.targets.wheel]
packages = ["src/{{ package_name }}"]

[tool.hatch.build.targets.wheel.force-include]
"src/{{ package_name }}/py.typed" = "{{ package_name }}/py.typed"

[dependency-groups]
dev = ["{{ package_name }}[dev{% if use_docs %},docs{% endif %}]"]

[tool.bumpversion]
current_version = "{{ initial_version }}"
commit = true
exclude = ["template/*"]
message = "chore: 更新版本 {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(version\s+=\s+)"{current_version}"'
replace = '\1"{new_version}"'

[[tool.bumpversion.files]]
filename = "src/{{ package_name }}/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'